fix: overflow issue, need to study the svw more

--- a/05-if-this-then-that/nasa/index.css
+++ b/05-if-this-then-that/nasa/index.css
@@ -8,8 +8,8 @@ html,
 body {
   margin: 0;
   padding: 0;
-  width: 100svw;
-  height: 100svh;
+  width: 100%;
+  height: 100%;
 }
 
 body {
